--- a/config.yaml
+++ b/config.yaml
@@ -1,4 +1,4 @@
-baseURL: "https://www.example.com/"
+baseURL: "https://techwriter-pooja.github.io/oregano/"
 theme: "up-business-theme"
 languageCode: "en-us"
 
